== Version 1.11.0 (unreleased) ==

Changes:

* `RelyingParty.appId` setting now also activates the `appidExclude` extension in
  addition to the `appid` extension.
* `RelyingParty.startRegistration()` now enables the `credProps` extension by
  default. The extension output, if any, is available as
  `RegistrationResult.isDiscoverable()` and
  `RegistrationResult.getClientExtensionOutputs().getCredProps()`.

New features:

* Added support for the `appidExclude`, `credProps`, `largeBlob` and `uvm`
  extensions.
* Added support for the new `authenticatorSelectionCriteria.residentKey` option:
  * Added method
    `AuthenticatorSelectionCriteria.builder().residentKey(ResidentKeyRequirement)`.
  * Added method `AuthenticatorSelection.getResidentKey()`.
  * Methods `builder().requireResidentKey(boolean)` and `isRequireResidentKey()`
    deprecated in favor of the above two new methods.
  * The builder methods `requireResidentKey(boolean)` and
    `residentKey(ResidentKeyRequirement)` both control one shared setting, which
    sets both the `requireResidentKey` and `residentKey` options simultaneously
    and in agreement with each other for backwards compatibility with older
    browsers.
* Added methods `PublicKeyCredentialCreationOptions.toCredentialCreateJson()`,
  `PublicKeyCredentialRequestOptions.toCredentialGetJson()` and
  `AssertionRequest.toCredentialGetJson()` for serializing to JSON without
  having to use Jackson directly.

Fixes:

* Added missing JavaDoc for `id` and `name` methods of initial
  `RelyingPartyIdentityBuilder` stages.


== Version 1.10.1 ==

webauthn-server-attestation:

* Fixed name of YubiKey Bio - FIDO edition in attestation metadata.


== Version 1.10.0 ==

webauthn-server-attestation:

* Added attestation metadata for YubiKey Bio.


== Version 1.9.1 ==

* Added missing `<dependencyManagement>` declaration to
  `webauthn-server-attestation` and `webauthn-server-core` POMs.

webauthn-server-attestation:
